correção e melhorias de codigo

--- a/html/style.css
+++ b/html/style.css
@@ -61,6 +61,7 @@ header h1 {
   justify-content: flex-start;
   align-items: center;
 }
+// Parte Final
 #carrinho {
   background: #ef4444;
   position: relative;
